<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuickSit</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">QuickSit</string>
    <string name="addr">Enter Address</string>
    <string name="time">Enter time:</string>
    <string name="find">Find</string>
    <string name="party">Party size:</string>
    <string name="range">Distance:</string>
    <string name="list_title">Locations Near You</string>
    <string name="list_item_name">Pastabilities</string>
    <string name="list_item_type">Italian Cuisine</string>
    <string name="list_item_dist">1.6 mi</string>
    <string name="wait_time">30 min.</string>
    <string name="show">Show:</string>

    <string-array name="genres_array">
        <item>All</item>
        <item>Italian</item>
        <item>American</item>
        <item>Chinese</item>
        <item>Diner</item>
        <item>Japanese</item>
        <item>Pub</item>
        <item>Indian</item>
        <item>Mexican</item>
        <item>Greek</item>
        <item>Dessert</item>
        <item>Other</item>
    </string-array>

    <string name="dialog_setname_header">Please provide a name.</string>

    <string name="psize">0</string>
    <string name="dsize">0</string>

    <string name="res_title">Restaurant</string>
    <string name="res_name">Dinosaur Bar-B-Que</string>
    <string name="res_addr">311 S Franklin St, Syracuse</string>
    <string name="res_type">American Cuisine</string>
    <string name="res_menu">Menu</string>
    <string name="res_yelp">Yelp</string>
    <string name="res_make">Make Reservation</string>
    <string name="res">Restaurant</string>


</resources>
