<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/list_item_name"
        android:id="@+id/list_item_name"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="22dp"
        android:textColor="#ff000000"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/list_item_type"
        android:id="@+id/list_item_type"
        android:layout_below="@+id/list_item_name"
        android:layout_alignLeft="@+id/list_item_name"
        android:layout_alignStart="@+id/list_item_name"
        android:textColor="#ff2d2d2d"
        android:layout_marginBottom="10sp"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/list_item_dist"
        android:id="@+id/list_item_dist"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="32dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="22sp"
        android:textColor="#ff000000"/>


</RelativeLayout>
