<!--<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cyberplays.quicksit.ResActivity">-->


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.cyberplays.quicksit.ResActivity"
        android:id="@+id/res"
        android:background="#DDDDDD">


        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/res_name"
            android:id="@+id/res_name"
            android:textSize="40sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="218dp" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/res_addr"
            android:id="@+id/res_addr"
            android:layout_below="@+id/res_name"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/res_phone"
            android:id="@+id/res_phone"
            android:layout_below="@+id/res_addr"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginBottom="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/res_menu"
            android:id="@+id/menu"
            android:layout_below="@+id/res_phone"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/yelp"
            android:layout_toStartOf="@+id/yelp"
            android:layout_marginTop="40sp"
            android:textSize="20sp"
            android:background="#FFFFFF"
            android:onClick="menuClick"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/res_yelp"
            android:id="@+id/yelp"
            android:layout_below="@+id/res_phone"
            android:layout_alignParentRight="true"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:layout_marginTop="40sp"
            android:textSize="20sp"
            android:background="#FFFFFF"
            android:onClick="yelpClick"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/res_make"
            android:id="@+id/res_make"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/menu"
            android:background="#CE123E"
            android:textSize="20sp"
            android:onClick="makeClick"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textView"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text=" " />

    </RelativeLayout>
    <!--
</ScrollView>-->
